Added New Patch Notes

--- a/index.html
+++ b/index.html
@@ -106,6 +106,78 @@
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 3/18/2021</small>
+              <p>
+                This patch introduced a few new items but mostly adjusts to drop rates of gear and stats on gear. We will begin working on new content for H/L in a few weeks.
+                <br>
+                ===Weapon/Armor===
+                <ul>
+                  <li>2 new items dropping from the Knight of Talazar:</li>
+                  <ul>
+                    <li>Gatherer's cloak: Cloak increases resources gathered (mining, lumberjacking, foraging, fishing</li>
+                    <li>Refiner's Helm: Helm reduces time spent processing items (sawing, smelting, spinning, weaving, tanning)<li>
+                  </ul>
+                  <li>2 new items dropping from Athropiniax:</li>
+                  <ul>
+                    <li>Ring of Arcane Power: Increases damage using spells (Thunder Strike and Soul Melt)</li>
+                    <li>Pendant of Arna's Blessings: Gives an increase in damage to (Repentenance and Mage Storm), removes requirement to have idol of Arna to cast Arna's Blessing</li>
+                  </ul>
+                  <li>All Warlod Gear (Defender, War Mage, Archer) is now repairable</li>
+                  <li>Sorcerer's Tunic now gives same buffs as Robe of Dark Rites</li>
+                  <li>Full Metal Cloak is now craftable via Blacksmithing</li>
+                  <li>Knightcaster gear set now requires level 108 and 100 STR/100 INT</li>
+                  <li>Paladin of the Flame gear now requires level 107; INT stat bonus increased on many pieces</li>
+                  <li>Adjusted stats on Ritual and Sorcerer gear sets</li>
+                  <li>Adjusted stats on Full Metal/Tangled/Spectral gear sets</li>
+                  <li>Adjusted stats on Ethereal Platinum gear set (now gives more pierce and disesase resist)</li>
+                  <li>Tooltip of Frost Bolts now say correct Secondary damage type</li>
+                </ul>
+                ===Treasures===
+                <ul>
+                  <li>Increased drop Chance of Rune Armor (limited time)</li>
+                  <li>Increased drop chance of Dark Essence</li>
+                  <li>Ring of Stardust dropping again (was accidentally culled)</li>
+                  <li>Reduced weight on Harvester Claws and Gargoyle Horns</li>
+                  <li>Loot drops now colored by item</li>
+                </ul>
+                ===Event===
+                <ul>
+                  <li>Knight of Talazar event change: </li>
+                  <ul>
+                    <li>Knights use a bigger creature model for easier targeting</li>
+                    <li>Their followers will not drop corpses.</li>
+                    <li>They will spawn closer to their intended targets</li>
+                    <li>They also have an increased attack range and more damage reduction for a longer fight</li>
+                  </ul>
+                </ul>
+                ===Map===
+                <ul>
+                  <li>All Criminal Spawn Gates are now marked Safe Zones</li>
+                  <li>Many map holes in Broken Finger Dungeon have been repaired. This should help with monster spawning there.</li>
+                  <li>Aportal in the jungle temple will now allow you to bypass the switches; once you have completed stage 1 and 2 of Sully's quest, and are on the stage to kill jellies, you can use the portal to enter the second level of the temple.</li>
+                </ul>
+                ===Monsters===
+                <ul>
+                  <li>HEROES ONLY:</li>
+                  <ul>
+                    <li>Monsters follow distance has been reduced to discourage mob dropping. If this is successful wi will roll it out to Legends as well. It will make it harder to round up masses of creatures to mass AOE kill, but it will also make travel a little easier in some areas.</li>
+                  </ul>
+                  <li>Split spawn of Gluttons/Female Gluttons so that all types are present in their spawn region north of Parian</li>
+                  <li>Spore Summoner spawn timer has been reduced and randomized slightly</li>
+                </ul>
+                ===PVP===
+                <ul>
+                  <li>Wanted boats can now dock/set sail</li>
+                </ul>
+                ===Quests===
+                <ul>
+                  <li>Marla Moculous quest no longer repeatable</li>
+                </ul>
+                
+              </p>
+            </article>
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 3/11/2021</small>
               <p>
                 Live patch - Heroes only
