Patch Note Updates

--- a/index.html
+++ b/index.html
@@ -100,10 +100,146 @@
             <h1>Welcome to AEGuides</h1>
             <p></p>
             <p></p>
-
             <div class="line"></div>
 
             <h2 id="aePatchNotes" class="anchor">Ashen Empires Patch Notes</h2>
+
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 4/9/2021</small>
+              <p>
+                  Blue Portals should be functioning normally again.
+              </p>
+            </article>
+
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 4/8/2021</small>
+              <p>
+                A longstanding issue with creatures spawning in the dungeon map has been fixed! Itcaused spawn issues on the underground cave systems; over time creatures would spawn into the black portions of the map and slowly empty the area of killable spawns.
+                Please leave feedback on caves - and be careful, as some might be more difficult than they previously were.
+              </p>
+              ===Weapon/Armor===
+              <ul>
+                <li>Slight DPS adjust on Symboled blade of Destruction (down)</li>
+                <li>Shield of the Sun CON req now 30 (down from 60)</li>
+              </ul>           
+              ===Even===
+              <ul>
+                <li>
+                  King of Krythan Event - this event will run throughout Season 3 Chaos. While killing monsters, you have a chance to be crowned the King of Krythan! There is only one King, and all players can see the King on their map.
+                  While king you can go beyond the 50K chaos point cap and receive triple points. You will receive a legendary King's Crown and King's blade with deadly DPS and a special effect. King statu lasts 20 minutes, or until you die or log out.
+                  The King's Blade is a rune slot large blade with no skill requirement and a hefty buff of +100 to all orbs and +500 HP. It's good to be the King!
+                </li>
+              </ul>
+              ===Map===
+              <ul>
+                <li>Increased spawn of buoys throughout the world and added some more buoy spawn points; shortened respawn timer slightly on all buoys.</li>
+                <li>The Dark Alchemist Droawan in Desprail is now a functioning shop and not just a dapper looking but evil hearted gentleman</li>
+                <li>New High level Swamp area <<< of New Korelth off of the coast of Krythan Island</li>
+                <li>Power Hour Altar (Good altar of Offering in Teylan) now costs half as much (in item coast)</li>
+                <li>Spawn Increase Altar (Evil altar of Offering in Meroven) now has a 1 hour cooldown to use following the end of a spawn increase. we will look at adjusting spawns in encounters to help smooth out gameplay experience, until then, we hope this and the dungeon spawning fix will help even out the play experience for everyone.</li>
+                <li>Icebane got tired of adventurer's eves-dropping on him and did a little rearranging in the 'ol lair.</li>
+                <li>LSP Portals on L no longer require cooldown to use.</li>
+              </ul>
+              ===Monsters===
+              <ul>
+                <li>Creatures should no longer spawn in the void; please share feedback on spawns as there were too many to individually test and we can adjust as necessary. Thank you</li>
+                <li>Adjusted spawn timere and drop tables for dungeon minibosses Der Schlaechter and Krank Brut. Extra kranky!</li>
+                <li>Adjusted spawn timer for Lotorian Crypt minibosses (Volsey, Lancel, Hobernsrnosfjskdjfkldsajorl)</li>
+                <li>
+                  Totem of Sabal's Children followers have been adjusted to circumvent abuse of their innate 100% resistances. All sabal followers now have a static 65% damage reduction, and health modifier was changed to accommodate a similar toghness. This has come at a slight cost in their DPS output. In addition, special abilities have been removed from the 
+                  Marrowsucker to prevent abuse of berserk and theBone crusher becasue he would sometimes get caught in a loop trying to cast root continuously.
+                </li>                
+              </ul>
+              ===Shop===
+              <ul>
+                <li>
+                  The Henchman store item has been updated and improved. this is a 10 token rental for 6 hours that will give you a level appropriate follower. You will also receive a totem which you can use to quickly resummons them from anywhere in the world if thye suffer an unfortunate accident on the job (please don;t ball OSHA).
+                  Please speak to the Henchman trainer in LSP (south of the bank & west of the LSP Farm) to start your henchman timer and receive a totem.
+                </li>
+                Level table below:
+                <ul>
+                  <li>Player Level 0-15: Level 10 henchman</li>
+                  <li>Player Level 15-24: Level 20 henchman</li>
+                  <li>Player Level 25-34: Level 30 Henchman</li>
+                  <li>Player Level 35-44: Level 40 Henchman</li>
+                  <li>Player Level 45-54: Level 50 Henchman</li>
+                  <li>Player Level 55-64: Level 60 Henchman</li>
+                  <li>Player Level 65-74: Level 70 Henchman</li>
+                  <li>Player Level 75-84: Level 80 Henchman</li>
+                  <li>Player Level 85-94: Level 90 Henchman</li>
+                  <li>Player Level 94-104: Level 100 Henchman</li>
+                  <li>Player Level 105+: Level 105 Henchman</li>
+                </ul>
+                <li>Rune Pack and Greater Potion Pack store changes are now live on L server (see previous hotfix for details on what is included). This patch added rune of Isos and Ulthien to rune Pack</li>
+              </ul>
+              ===Chaos==
+              <ul>
+                <li>
+                  Demon Spires will now spawn regularly throughout Krythan Island and Hell on Chaos only. These are high level encounters that will spawn difficult mobs as you chip away at the spire. Any players on the spire's hat elist will receive treasures randomly, in similar way to the Knight of Talazar.
+                  This is designed to be a PVP focal point as they reliably drop high level gear, including Rune items, when killed.
+                </li>
+                <li>A merchant from far away has unloaded hi pack horse on a secluded island in Mainlands, selling valuable commodities such as Blood Bandges, Crates, Malacinth, pie and rare and valuable potions for gold. A fee of 25k gold is required to ener. (Chaos Only)</li>
+                <li>Parian Warlord quest lines can now be completed on Chaos</li>
+              </ul>
+          
+            </article>
+
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 3/29/2021</small>
+              <p>
+                Hotfix for H only tonight. This hotfix was to address the issue with wanted players unable to board boats in SoC, but other things got bundled with it.
+              </p>
+              <ul>
+                <li>Adjusted token shop rune pack and potion pack quantities and composition (this will be live on L at the next update)</li>
+                <li>New follower script uses player con and leadership skill to determine its max HP. Totem of Sabal Followers (Deceiver, Bonecrusher, Marrowsucker) are getting their stats adjusted at the next update to compensate for this change.</li>
+                <li>Wanted players can board boats in SoC</li>
+                <li>New Potion Pack (H only)</li>
+                <ul>
+                  <li>50 Greater Healing Potion</li>
+                  <li>50 Greater Stamina Potion</li>
+                  <li>50 Greater Repair Potion</li>
+                  <li>50 Cure Greater disease Potion</li>
+                  <li>50 Cure Greater Poison Potion</li>
+                  <li>15 Greater Disease Potion</li>
+                  <li>15 Greater Poison Potion</li> 
+                  <li>5 Potion of Lycanthropy</li>
+                  <li>5 Oil of Restoration</li> 
+                </ul>
+                <li>New Rune Pack (H only)</li>
+                <ul>
+                  <li>50 of each class rune</li>
+                  <li>50 Gazelle Antlers</li>
+                  <li>50 Idol of Arna</li>
+                  <li>25 Rune of Malith</li>
+                  <li>25 Rune of Malenox</li>
+                  <li>25 Rune of Agon</li>
+                  <li>25 Rune of Sabal</li>
+                  <li>25 Rune of Veldan</li>
+                  <li>25 Rune of Kuthos</li>
+                  <li>25 Rune of Adregard</li>
+                </ul>
+              </ul>
+              <p>
+                Once again, these changes will be applied to L store potion and rune bag packs at the next update. We hope this is a better value for your money and saves you a little time as well! Thank you!
+              </p>
+            </article>
+
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 3/27/2021</small>
+              <p>
+                The Secure Site has been updated with a small QoL fix - the inventory in your Character Details page will now show all proper item names as well as what container they are stored in.
+                Items that have been renamed will also show their given names.
+              </p>
+              <p>
+                If you aren't sure how to view that , log here <u><a href="https://secure.pixelminegames.com/AccountLogin.aspx">Account Login</a></u>. click on GAMES, then View your Ashen Empires Character Information, then choose the server/player you'd like to view.
+              </p>
+            </article>
+
+
             <div class="body-line"></div>
             <article>
               <small class="article-date">FujiQ 3/18/2021</small>
@@ -1209,6 +1345,25 @@
                                 <li>2 Drop Rate Increase</li>
                                 <li>2 Broken finger Dungeon Access</li>
                                 <li>2 Summon Corpse</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default">
+                      <div class="panel-heading accordion-border">
+                        <h5 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#april2021">
+                          April 2021</a>
+                        </h5>
+                      </div>
+                      <div id="april2021" class="panel-collapse collapse">
+                        <div class="panel-body accordion-border">
+                            <ul class="light-grey-text">
+                                <li>2 Berserker Potion Packs</li>
+                                <li>3 Summon Corpse</li>
+                                <li>1 Item No Drop</li>
+                                <li>2 Broken Finger Dungeon Tickets</li>
+                                <li>1 Dragon Mask Pack</li>
                             </ul>
                         </div>
                       </div>
