Updated to the current Grab Bags

--- a/index.html
+++ b/index.html
@@ -1368,6 +1368,62 @@
                         </div>
                       </div>
                     </div>
+                    <div class="panel panel-default">
+                      <div class="panel-heading accordion-border">
+                        <h5 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#may2021">
+                          May 2021</a>
+                        </h5>
+                      </div>
+                      <div id="may2021" class="panel-collapse collapse">
+                        <div class="panel-body accordion-border">
+                            <ul class="light-grey-text">
+                                <li>1 City Faction Reset</li>
+                                <li>1 Teleport Stones</li>
+                                <li>1 Rune Pack</li>
+                                <li>2 Lair of Minos Access</li>
+                                <li>3 PPH</li>
+                                <li>4 Henchman</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default">
+                      <div class="panel-heading accordion-border">
+                        <h5 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#june2021">
+                          June 2021</a>
+                        </h5>
+                      </div>
+                      <div id="june2021" class="panel-collapse collapse">
+                        <div class="panel-body accordion-border">
+                            <ul class="light-grey-text">
+                                <li>1 Greater Potion Pack</li>
+                                <li>1 Broken Finger Access</li>
+                                <li>1 Wizard's Familiar</li>
+                                <li>2 Personal Power Hours</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default">
+                      <div class="panel-heading accordion-border">
+                        <h5 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#july2021">
+                          July 2021</a>
+                        </h5>
+                      </div>
+                      <div id="july2021" class="panel-collapse collapse">
+                        <div class="panel-body accordion-border">
+                            <ul class="light-grey-text">
+                                <li>1 Item Rename</li>
+                                <li>1 Rune Shard</li>
+                                <li>1 Teleport Stones</li>
+                                <li>1 Dragon Mask Pack</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
