Add a few more Patch Notes to the List

--- a/index.html
+++ b/index.html
@@ -106,6 +106,213 @@
 
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 6/3/2021</small>
+              ===System===
+              <ul>
+                <li>System channel can now be split off from your main channel and turn on/off. We have gone through and reduced the number of system messages you will receive at the top of the game window.</li>
+                <li>In a related note, the Message of the Day will no longer crash the client since it will be in the system message chat channel. We hope to use that feature more often to ommunicate with you.</li>
+                <li>Removed ammo and gold retention party messages</li>
+              </ul>
+              ===Gear/Items===
+              <ul>
+                <li>Adjusted requirement, bonuses, and resistances for Myrmidon set</li>
+                <li>Adjusted requirement, bonuses, and resistances for Nordic Warrior set</li>
+                <li>New art for all three Warlod sets (Defender's, Warmage's, Archer's</li>
+                <li>Complete Ritual/Sorcerer gear sets dropping on low rates from non-boss mobs</li>
+                <li>Reduced requirement on Nighstar Shield to 100 STR</li>
+                <li>Adjusted Bloodletter set to level 106 requirement to match as a set</li>
+                <li>Removed CON requirement on Talisman of the Prime</li>
+                <li>Rebalanced Hardened Warden drop availability</li>
+                <li>Rebalanced Soothsayer's Tome drop availability</li>
+                <li>Removed 100% nature on Heartwood Bow, Crossbow, and 100% Poison on Seething Poison Bow</li>
+                <li>Increased drop chance slightly on pristine blue dragon scales</li>
+                <li>Wretched Ones and Nightmares drop full set of Banished/Wretched/Briarwood (on low chances)</li>
+                <li>Tyrian Staff Sling now has an additional rune slot</li>
+              </ul>
+              ===Event===
+              <ul>
+                <li>Dispare => despair</li>
+                <li>Guards should all reappear following KoT events</li>
+              </ul>
+              ===Creatures===
+              <ul>
+                <li>Removed solo flag from Giant Cave Rat, Wyvern Nestling, Putrescent Ghoul, Young Dire Wolf, Ancient Ogre</li>
+                <li>Reduced number of Tserith's followers</li>
+                <li>Added more Rock Trolls to RT spawn NE of Valmond</li>
+              </ul>
+              ===Chaos===
+              <ul>
+                <li>Altar of the Ancient Kings (requires gold) will turn on point gain for the serer pas 50K points for the plebians</li>
+                <li>Altar of Chaos (also requires gold) will turn on the monster brains and allow them to attack first</li>
+              </ul>
+              ===Quests===
+              <ul>
+                <li>Tarvan, Hanvik, Lonvia will now only announce their presence if they are somwhat close to your location.</li>
+              </ul>
+              ===Map===
+              <ul>
+                <li>A new VIP portal for DISCREET customers is in LSP; you may choose the same options as traditional static portals 
+                  (Silvest, Krog, Whisperdale, Josody, Parian, Rahura, Khafra, Valmond) and arrive at your destination cloak and dagger, as you wish.
+                </li>
+                <li>Fix for cave in Cliffside</li>
+                <li>Added Dark Guards to New Royale spawn gate</li>
+                <li>Added some housing plots to TR lands near Meroven and Duremar</li>
+              </ul>
+              ===PVP===
+              <ul>
+                <li>Looting with active spell will now make you criminal</li>
+                <li>Victim will be notified when items are taken regardless if dragged or clicked</li>
+                <li>Boats can no longer loot land corpses, and vice versa</li>
+              </ul>
+              ===The Junk Drawer===
+              <ul>
+                <li>The days of smuggling gear to Valinor on a boat are over. King lotor is out in his cigar boat looking for baddies to bust. You dastardly criminals decked out of newbie island should be ashamed of yourselves!
+                  You have corrupted the innocent island of Valinor for far too long.
+                </li>
+              </ul>
+
+            </article>
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 5/18/2021</small>
+              <p>
+                  <strong>HOTFIX (Heroes only)</strong>
+              </p>              
+              <ul>
+                <li>Blade of Ancients follower is disabled temporarily</li>
+              </ul>
+            </article>
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 5/7/2021</small>
+              <p>
+                  <strong>HOTFIX</strong>
+              </p>
+              <ul>
+                <li>Fixed an issue where Hell Spawns spawned from Totem of Demonic Control were not clearing the summoned pet flag when being destroyed,
+                  preventing players from summoning a follower.
+                </li>
+                <li>New dock now will no longer let you dock if you have not completed the requirement</li>
+                <li>Quest in Roycroft "Enterprising Gentlemen" now lets you resummon the raid or turn in quest to Captain Abel</li>
+              </ul>
+              <p>
+                If you are unable to summon a follower due to this please page or send a DM to have your character fixed. Thank you.
+              </p>
+            </article>
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">Zarquon 5/6/2021</small>
+              <p>
+                 A non-content patch tonight; the big takeaways are the DTM xp boost for level 105+ players and changes to crafting. we added a significant boost to ammo 
+                 production and enchanting materials that should help out eveyone who wants to hunt for more than 1 hour at a time. 
+              </p>
+              <p>
+                Development has been progressing steadily on the update to Talazar's Revenge, but we have also been going though the community submitted bugs
+                from years ago, cleaning out old bugs and fixing things were we can.
+              </p>
+              <p>
+                thank you for your unbelievable support and kind words - we appreciate this community and hope this patch finds you well see you on Chaos tomorrow...
+              </p>
+              ===Leadership===
+              <ul>
+                <li>You can only have 1 summoned pet at a time (exception is Demonic Control totem which spawns two creatures); current summoned pets: Spectral pet (using Summon Spectre spell),
+                  henchman (Token shop item), Wizard's Familiar (Token shop item); Marrowsucker/Bonecrusher/Deceiver (Totem of Sabal's Childern), Ancient Follower (blade of the Ancients), Hellspawn (Totem of Demonic Control);
+                  summoned creatures from Totem of the bat, Totem of the hound, etc are not hooked into this system yet.
+                </li>
+                <li>
+                  Totem of Demonic Control now asks for confirmation before binding to you.
+                </li>
+              </ul>
+              ===Gear/Items===
+              <ul>
+                <li>Adjusted stats and colors on Dragon Leather gear sets</li>
+                <li>Blade of the Ancients no longer dropping from Spore Summoner, Death cap; added to other (expansion) bosses</li>
+                <li>Tangled, Spectral, full Metal gear now available to craft on H/L</li>
+                <li>Adjusted Repair Potion prices to match repair quality, was reversed</li>
+                <li>Hatchet of Force was not giving the described +12 STR orb bonus</li>
+                <li>Mystical Minotaur Axe special updated to be even more mystical than before</li>
+                <li>Infinite loop ring typo</li>
+                <li>Adjusts to Rune gear resists</li>
+                <li>Adjusts to Tangled/Spectral/Full Metal gear resists and bonuses</li>
+              </ul>
+              ===Chaos===
+              <ul>
+                <li>Made Chaos Fragment not usable on live servers</li>
+                <li>King's Blade was printing damage instead of life on heal special</li>
+                <li>Server will now broadcast when the king has died</li>
+              </ul>
+              ===Crafting===
+              <ul>
+                <li>Removed silk and regular bandges from TM list</li>
+                <li>Regular and silk bandages now produce 10 bandage per 1 bolt of cloth</li>
+                <li>Adjusted arrow output - now produce triple the arrows at same ratio</li>
+                <li>Broadhead Bolts now made with Enchanted Planks vs Gnarled Logs (but not a bad idea to save your logs for a future update!)</li>
+                <li>Renamed Poison Unquent to Poison unguent and updated all refs</li>
+                <li>You can now craft larger batches of special ammo (flame, poison, disease, frost); 100 of flame/frost up to 500 ammuntion, or 50 or poison/disease/acid up to 500 ammo.)
+                  for example, if you have 3 Disease Unguents and 150 arrows, it will make 150 disease arrows. It will select the highest amount you can make out of both stacks up to 500 total
+                  arrows/bolts/pebbles/seekers
+                </li>
+                <li>Ability to spam craft acid pots has been fixed (probably)</li>
+                <li>Enchant Leather/Brimidian/Tallenite/Thrallenite spells now enchants 5 items at a time</li>
+                <li>Removed Construction related items from Carpentry TM</li>
+              </ul>
+              ===Mobs===
+              <ul>
+                <li>Fix for Athro's altar (shouldn't be able to spawn more than 2)</li>
+                <li>Blade of the Ancients summoned follower (Ancient Follower) updated stats</li>
+                <li>A new creature haunts the swamp East of Josody...</li>
+                <li>Split ghoul spectres off of shared spawn they had with greater skeles NE of Valmond</li>
+                <li>Increased mature/elder wyvern spawn</li>
+                <li>Adjusted high Priest of Kuthos spawning</li>
+                <li>high level boss NPCs are now displaying the correct level in tooltip</li>
+                <li>Hell Guardian disease/poison resist now 25%</li>
+              </ul>
+              ===Spells===
+              <ul>
+                <li>Summon Spectre follower (Spectral Pet) has been updated; will now give level appropriate spectral pet.</li>
+                <li>Transmute will now include the transmuted object's name when it succeeds</li>
+                <li>All buff/defubb should print in yellow instead of red</li>
+              </ul>
+              ===Quests===
+              <ul>
+                <li>Faction dungeons on both servers now allow players in if players have completed quest, regardless of current faction</li>
+                <li>increased experience gain from DTMs for 105+ level players (1.5x rate on turn in, can go beyond 10m</li>
+                <li>Wyvrens typo in DTM and Champion of Lotor dialogue</li>
+              </ul>
+              ===Map===
+              <ul>
+                <li>New Dock on mainlands between Josody and BLC cave...</li>
+                <li>The whirlpool exit won't block players in hallway; it is hostile but does not move</li>
+                <li>Added some light sources to the Kuthos Temple water cave (both levels)</li>
+                <li>Set Chaos/Crim Spawn gate guard alignments to Evil and set a few guards where there were none (Lopal, Meroven)</li>
+                <li>Updated fallen warrior memorial area in LSP to include former player runsincircles</li>
+                <li>Removed ghouls (TR mob) from mainlands spawn table</li>
+                <li>Removed lots of trees in between Chlera and Desprail and a few mobs</li>
+                <li>Placed Cauldron in Arda</li>
+                <li>Placed Well in Maraket</li>
+              </ul>
+              ===Token Shop===
+              <ul>
+                <li>Wizard's Familiar item has been updated to be more beneficial; Familiar Trainer will give you a totem that you can use to summon the familiar
+                  if it kicks the bucket. Still gives 10% bonus to spells.
+                </li>
+              </ul>
+              ===The Junk Drawer===
+              <ul>
+                <li>Typo in new Werewolf dungeon "rippd"</li>
+                <li>Can no longer accidentally place items inside the Private Banker (guild). he is also no longer facing north(always south)</li>
+                <li>H server players will now be forced to neutral PVP if they log in with an old NeutralLotor or NeutralTalazar or pure Neutral faction (some were unable to attack due to this issue
+                  as /pvp command has been disabled)
+                </li>
+                <li>Fixed a corner missing in Teylan farm building</li>
+                <li>Updated all references of scopriAan to scorpiOn</li>
+                <li>Grammer issue when you received a nature dot (so and so has caused nature has gripped you in its wrath!)</li>
+                <li>Wyvern typo in Champion of Lotor dialogue</li>
+              </ul>
+            </article>
+
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 4/9/2021</small>
               <p>
                   Blue Portals should be functioning normally again.
